--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,7 @@ version: "3"
 services:
   # PostgreSQL database service
   database:
+    container_name: ${DB_CONTAINER_NAME}
     image: postgres:latest
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
