--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   # PostgreSQL database service
   database:
     container_name: ${DB_CONTAINER_NAME}
-    image: postgres:latest
+    image: postgres:14
     environment:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
